--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,12 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = generals_bot
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
+user = bhoov
 # description = A description of your project
 # keywords = some keywords
 # author = Your Name
@@ -22,7 +22,7 @@ custom_sidebar = False
 # Add licenses and see current list in `setup.py`
 license = apache2
 # From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
-status = 2
+status = 1
 
 # Optional. Same format as setuptools requirements
 # requirements = 
